index.html에dog.png 적용 업데이트

--- a/index.html
+++ b/index.html
@@ -19,5 +19,7 @@
 		<div>
 			<div><img src="imgs/google.png" alt="Hi Google"></div>
 		</div>
+		<div><img src="imgs/dog.png" alt="comming~"></div>
+		</div>
 	</body>
 </html>
